@@ -9,6 +9,7 @@
 * Credorax: Add 3D Secure authentication fields [davidsantoso] #2446
 * Authorize.net: Pass Level 2 Data Fields [curiousepic] #2444
 * Quickpay V10: Fix store and token use for recurring payments [wsmoak] #2180
+* Ebanx: Add gateway support [davidsantoso] #2447
 
 == Version 1.66.0 (May 4, 2017)
 * Support Rails 5.1 [jhawthorn] #2407
